--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body, html {
   display: flex;
   flex-direction: row;
   gap: 8px;
-  justify-items: center;
+  justify-content: center;
   width: 100%;
   flex-wrap: wrap;
 }
