--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,15 @@ body, html {
   color: #888;
 }
 
+.card-buttons{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 12px;
+}
+
 .card-container{
   display: flex;
   flex-direction: row;
